# uxplay-windows

./: CMakeLists.txt  README.md  make_release.sh  make_release_CI.sh  product.wxs
.github/workflows/: build-uxplay-windows-arm64.yml  build_uxplay-windows-v2.yml
docs/: BUILDING.md  DEVELOPERS-GUIDE.md  THIRD_PARTY_NOTICES.md
libuxplay-patches/: windows-native-fullscreen-input.patch
mdnsresponder-patches/: 2881.patch  quote-service-path.patch  remove-legacy-nat.ps1
src/: airplayworker.cpp  engine_main.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mdns_responder.cpp  single_instance.cpp  single_instance.hpp  uxplay-beacon-windows.py
stuff/: complete_runtime_bundle.sh  copy_directx_shader_runtime.sh  validate_gstreamer_bundle.sh  validate_gstreamer_properties.c
